refactor: 미사용 UserRole 제거
- 역할 기반 권한을 쓰지 않고 소유자 기반으로 인가하므로 User.role과 UserRole enum, JWT role claim을 걷어냄